1999-12-01  James Henstridge  <james@daa.com.au>

	* plug-ins/python/pydia-*.[ch]: starts of python scripting plug-in.
	I am currently wrapping the basic elements in the diagram in python
	objects -- nothing to see or play with yet.

1999-11-30  Alexander Larsson  <alla@lysator.liu.se>

	* AUTHORS:
	* HACKING:
	James Henstridge <james@daa.com.au> is now the maintainer of Dia.

1999-11-29  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	* po/ru.po:
	Added russian translation from Valek Filippov <frob@df.ru>

1999-11-24  James Henstridge  <james@daa.com.au>

	* sheets/UML/*: 
	* sheet/ER/*: moved extra sheet pixmaps back to separate dirs as
	discussed with Alex.  Also added extra makefiles so that make install
	works correctly.

1999-11-23  Alexander Larsson  <alla@lysator.liu.se>

	* app/preferences.[ch]:
	* app/display.c:
	Added snap to grid preference.
	Patch from Michael Leslie <mles@springboardwireless.com>

1999-11-21  Alexander Larsson  <alla@lysator.liu.se>

	* app/load_save.c:
	* lib/dia_xml.c:
	* lib/sheet.c:
	* lib/text.c:
	* objects/custom/shape_info.c:
	All strings returned by libxml must be freed with free, not
	g_free, or there will be problems if you use memory debugging
	in glib.
	
1999-11-21  Alexander Larsson  <alla@lysator.liu.se>

	* app/create_object.[ch]:
	* app/menus.c:
	* app/tool.[ch]:
	* app/commands.[ch]:
	* app/pixmaps.h:
	* app/interface.[ch]:
	Reverted the tool menu patch. It has some 'issues'.
	I liked it though, so it'll probably return.

1999-11-21  Alexander Larsson  <alla@lysator.liu.se>

        Fixed a lot of memory leaks. Thanks to Bruce Mitchener
	<bruce@cybersight.com> for some purify runs and analysis.
	Also a great thank you to Owen Taylor for creating MemProf, a
	free memory leak detector that was used to find and verify a
	lot of these fixes.
	
	* app/diagram.c:
	* app/paginate_psprint.c:
	* app/render_eps.[ch]:
	* app/render_svg.[ch]:
	Free renderers.

	* app/interface.c: